@@ -2,6 +2,10 @@
 Ensure property covariance is properly handled throughout the internal model (#1713)
 Throw exceptions when async validator is invoked synchronously (#1705)
 Removal deprecated OnFailure/OnAnyFailure callbacks.
+Remove deprecated RunDefaultMvcValidationAfterFluentValidationExecutes option from ASP.NET integration.
+Remove deprecated Options property from RuleComponent.
+Remove deprecated TestHelper methods.
+Remove PropertyValidator backwards compatibility layer.
 
 10.3.0 -
 Update Russian translations (#1761)
